[tool.poetry]
name = "envira"
version = "0.1.0"
description = "Python package to parse configuration from environment variables using python type hinting"
authors = ["5cat <cat@heaven.ist>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
